--- a/index.html
+++ b/index.html
@@ -154,7 +154,31 @@
   <section>
     <h2 class="section-title">Apps</h2>
 
-    <!-- Anniversary Keeper -->
+    <article class="app-card">
+      <div class="app-icon-wrapper" style="background:#eef2ff;">
+        <img src="homu-icon.png" alt="HOMU+ icon" />
+      </div>
+
+      <div class="app-info">
+        <div class="app-badge">iOS • Free / Premium</div>
+        <h2>HOMU+</h2>
+        <p>A location-based focus app that automatically blocks distracting apps when you're at home.</p>
+        <p>Stay focused in your personal space with smart app-blocking schedules and timers.</p>
+
+        <div class="app-links">
+          <a href="https://apps.apple.com/app/homu/idXXXXXXXXXX" target="_blank" rel="noopener noreferrer">
+            View on the App Store
+          </a>
+          <a href="https://omochisoft.github.io/homu_privacy.html" target="_blank" rel="noopener noreferrer">
+            Contact / Support &amp; Privacy Policy
+          </a>
+          <a href="https://omochisoft.github.io/homu_terms.html" target="_blank" rel="noopener noreferrer">
+            Terms of Use
+          </a>
+        </div>
+      </div>
+    </article>
+
     <article class="app-card">
       <div class="app-icon-wrapper" style="background:#f5d3db;">
         <img src="anniversary-keeper-icon.png" alt="Anniversary Keeper icon" />
@@ -177,7 +201,6 @@
       </div>
     </article>
 
-    <!-- Gift Note -->
     <article class="app-card">
       <div class="app-icon-wrapper" style="background:#ffeef4;">
         <img src="giftnote_icon.png" alt="Gift Note icon" />
@@ -200,7 +223,6 @@
       </div>
     </article>
 
-    <!-- Smart Savings Tracker -->
     <article class="app-card">
       <div class="app-icon-wrapper" style="background:#e0f6e0;">
         <img src="smartsavings_icon.png" alt="Smart Savings Tracker icon" />
@@ -223,7 +245,6 @@
       </div>
     </article>
 
-    <!-- Fridge Inventory: Grocery Cost -->
     <article class="app-card">
       <div class="app-icon-wrapper" style="background:#e6f2ff;">
         <img src="fridge.png" alt="Fridge Inventory: Grocery Cost icon" />
@@ -249,7 +270,6 @@
       </div>
     </article>
 
-    <!-- BreezeChat Air - Free -->
     <article class="app-card">
       <div class="app-icon-wrapper" style="background:#e6f4ff;">
         <img src="breezefree-icon2.png" alt="BreezeChat Air icon" />
@@ -272,10 +292,8 @@
       </div>
     </article>
 
-    <!-- Slide Puzzle Galaxy -->
     <article class="app-card">
       <div class="app-icon-wrapper" style="background:#e9e6ff;">
-        <!-- ここは実ファイル名に合わせて差し替えてOK -->
         <img src="galaxy_icon.png" alt="Slide Puzzle Galaxy icon" />
       </div>
 
