--- a/fridge/terms.html
+++ b/fridge/terms.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8" />
-  <title>Terms of Use | Fridge Inventory: Grocery Cost | Omochi Soft</title>
+  <title>Terms of Use | Fridge Inventory & AI Scan | Omochi Soft</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <style>
@@ -162,7 +162,7 @@
   </div>
 
   <div class="meta">
-    <span class="pill" id="appNamePill">アプリ名：見える化　冷蔵庫の在庫管理と食材費</span>
+    <span class="pill" id="appNamePill">冷蔵庫の在庫管理とAIスキャン</span>
     <span class="pill">Last Updated: 2026-02-10</span>
     <span class="pill">Contact: <a href="mailto:omochi_soft-dev@yahoo.co.jp">omochi_soft-dev@yahoo.co.jp</a></span>
   </div>
@@ -184,11 +184,11 @@
   </section>
 
   <section class="card langblock active" id="lang-ja" data-lang="ja" lang="ja">
-    <h2>利用規約（見える化　冷蔵庫の在庫管理と食材費）</h2>
+    <h2>利用規約（冷蔵庫の在庫管理とAIスキャン）</h2>
 
     <p>
       この利用規約（以下「本規約」といいます）は、Omochi Soft（開発者：Kotaro Omori。以下「当方」といいます）が提供する
-      スマートフォンアプリ「見える化　冷蔵庫の在庫管理と食材費」（以下「本アプリ」といいます）および本アプリを通じて提供される機能
+      スマートフォンアプリ「冷蔵庫の在庫管理とAIスキャン」（以下「本アプリ」といいます）および本アプリを通じて提供される機能
       （以下「本サービス」といいます）の利用条件を定めるものです。ユーザー（以下「ユーザー」といいます）は、本規約に同意のうえ本サービスを利用するものとします。
     </p>
 
@@ -329,10 +329,10 @@
   </section>
 
   <section class="card langblock" id="lang-en" data-lang="en" lang="en">
-    <h2>Terms of Use (Fridge Inventory: Grocery Cost)</h2>
+    <h2>Terms of Use (Fridge Inventory & AI Scan)</h2>
     <p>
       These Terms of Use (“Terms”) set forth the conditions for using the mobile application
-      “Fridge Inventory: Grocery Cost” (the “App”) and related features (the “Service”) provided by
+      “Fridge Inventory & AI Scan” (the “App”) and related features (the “Service”) provided by
       Omochi Soft (Developer: Kotaro Omori, “we”).
       By using the Service, you agree to these Terms.
     </p>
@@ -425,10 +425,10 @@
   </section>
 
   <section class="card langblock" id="lang-es" data-lang="es" lang="es">
-    <h2>Términos de Uso (Inventario de Nevera y Costos)</h2>
+    <h2>Términos de Uso (Control Nevera y Scan IA)</h2>
     <p>
       Estos Términos de Uso (“Términos”) establecen las condiciones para usar la aplicación móvil
-      “Inventario de Nevera y Costos” (“App”) y sus funciones (“Servicio”). Al usar el Servicio, aceptas estos Términos.
+      “Control Nevera y Scan IA” (“App”) y sus funciones (“Servicio”). Al usar el Servicio, aceptas estos Términos.
     </p>
     <h3 id="es-summary">Resumen</h3>
     <ul>
@@ -467,9 +467,9 @@
   </section>
 
   <section class="card langblock" id="lang-ko" data-lang="ko" lang="ko">
-    <h2>이용약관 (냉장고 재고·식비 관리)</h2>
+    <h2>이용약관 (냉장고 재고관리 & AI 스캔)</h2>
     <p>
-      본 이용약관은 “냉장고 재고·식비 관리” 앱의 이용 조건을 규정합니다.
+      본 이용약관은 “냉장고 재고관리 & AI 스캔” 앱의 이용 조건을 규정합니다.
       서비스를 이용함으로써 사용자는 본 약관에 동의합니다.
     </p>
     <h3 id="ko-summary">요약</h3>
@@ -481,9 +481,9 @@
   </section>
 
   <section class="card langblock" id="lang-zh-hans" data-lang="zh-hans" lang="zh-Hans">
-    <h2>使用条款（冰箱库存与食材费用）</h2>
+    <h2>使用条款（冰箱库存管理 & AI扫描）</h2>
     <p>
-      本使用条款适用于应用“冰箱库存与食材费用”的使用。使用本服务即表示你同意本条款。
+      本使用条款适用于应用“冰箱库存管理 & AI扫描”的使用。使用本服务即表示你同意本条款。
     </p>
     <h3 id="zh-hans-summary">摘要</h3>
     <ul>
@@ -494,9 +494,9 @@
   </section>
 
   <section class="card langblock" id="lang-zh-hant" data-lang="zh-hant" lang="zh-Hant">
-    <h2>使用條款（冰箱庫存與食材費）</h2>
+    <h2>使用條款（冰箱庫存管理 & AI掃描）</h2>
     <p>
-      本使用條款適用於應用「冰箱庫存與食材費」之使用。使用本服務即表示你同意本條款。
+      本使用條款適用於應用「冰箱庫存管理 & AI掃描」之使用。使用本服務即表示你同意本條款。
     </p>
     <h3 id="zh-hant-summary">摘要</h3>
     <ul>
@@ -515,14 +515,14 @@
 
 <script>
   const appNames = {
-    "ja": "見える化　冷蔵庫の在庫管理と食材費",
-    "en": "Fridge Inventory: Grocery Cost",
-    "es": "Inventario de Nevera y Costos",
-    "de": "Kühlschrank Inventar & Kosten",
-    "fr": "Inventaire Frigo et Coût",
-    "ko": "냉장고 재고·식비 관리",
-    "zh-hans": "冰箱库存与食材费用",
-    "zh-hant": "冰箱庫存與食材費"
+    "ja": "冷蔵庫の在庫管理とAIスキャン",
+    "en": "Fridge Inventory & AI Scan",
+    "es": "Control Nevera y Scan IA",
+    "de": "Kühlschrank & KI-Scan",
+    "fr": "Inventaire Frigo & Scan IA",
+    "ko": "냉장고 재고관리 & AI 스캔",
+    "zh-hans": "冰箱库存管理 & AI扫描",
+    "zh-hant": "冰箱庫存管理 & AI掃描"
   };
 
   const pageTitleByLang = {
