--- a/fridge.html
+++ b/fridge.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Fridge Inventory: Grocery Cost | Privacy Policy | Omochi Soft</title>
+  <title>Fridge Inventory & AI Scan | Privacy Policy | Omochi Soft</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <style>
@@ -104,7 +104,7 @@
 
 <body>
   <header>
-    <h1 id="pageTitle">Fridge Inventory: Grocery Cost</h1>
+    <h1 id="pageTitle">Fridge Inventory & AI Scan</h1>
     <p id="pageSubtitle">Support Information &amp; Privacy Policy</p>
   </header>
 
@@ -121,9 +121,9 @@
 
   <main>
     <section class="lang card" data-lang="en">
-      <h2>About <span class="appname">Fridge Inventory: Grocery Cost</span></h2>
+      <h2>About <span class="appname">Fridge Inventory & AI Scan</span></h2>
       <p>
-        <span class="appname">Fridge Inventory: Grocery Cost</span> is an app that helps you
+        <span class="appname">Fridge Inventory & AI Scan</span> is an app that helps you
         <strong>log groceries</strong> and <strong>visualize what’s in your fridge</strong>.
         You can record items with details such as ingredients, quantity, price, purchase date,
         and store, then review your fridge inventory and shopping history anytime.
@@ -142,7 +142,7 @@
 
       <h3>1. Introduction</h3>
       <p>
-        <span class="appname">Fridge Inventory: Grocery Cost</span> is an application for recording and reviewing grocery
+        <span class="appname">Fridge Inventory & AI Scan</span> is an application for recording and reviewing grocery
         items, fridge inventory, and ingredient costs. The app is designed to work without any user account,
         and the data you enter is stored locally on your device by default.
       </p>
@@ -220,9 +220,9 @@
     </section>
 
     <section class="lang card hidden" data-lang="ja">
-      <h2><span class="appname">見える化　冷蔵庫の在庫管理と食材費</span>について</h2>
+      <h2><span class="appname">冷蔵庫の在庫管理とAIスキャン</span>について</h2>
       <p>
-        <span class="appname">見える化　冷蔵庫の在庫管理と食材費</span>は、食材の記録と冷蔵庫の在庫を「見える化」するためのアプリです。
+        <span class="appname">冷蔵庫の在庫管理とAIスキャン</span>は、食材の記録と冷蔵庫の在庫を「見える化」するためのアプリです。
         食材名・数量・価格・購入日・購入店などを登録し、在庫や買い物履歴をいつでも確認できます。
       </p>
       <p class="muted">
@@ -298,7 +298,7 @@
     </section>
 
     <section class="lang card hidden" data-lang="es">
-      <h2>Acerca de <span class="appname">Inventario de Nevera y Costos</span></h2>
+      <h2>Acerca de <span class="appname">Control Nevera y Scan IA</span></h2>
       <p class="muted">No requiere cuenta. Los datos se guardan localmente o en iCloud.</p>
       <h2>Política de Privacidad</h2>
       <p class="muted"><strong>Última actualización:</strong> 2026-02-10</p>
@@ -325,7 +325,7 @@
     </section>
 
     <section class="lang card hidden" data-lang="de">
-      <h2>Über <span class="appname">Kühlschrank Inventar &amp; Kosten</span></h2>
+      <h2>Über <span class="appname">Kühlschrank & KI-Scan</span></h2>
       <p class="muted">Kein Konto erforderlich. Daten werden lokal oder in iCloud gespeichert.</p>
       <h2>Datenschutzerklärung</h2>
       <p class="muted"><strong>Zuletzt aktualisiert:</strong> 2026-02-10</p>
@@ -352,7 +352,7 @@
     </section>
 
     <section class="lang card hidden" data-lang="fr">
-      <h2>À propos de <span class="appname">Inventaire Frigo et Coût</span></h2>
+      <h2>À propos de <span class="appname">Inventaire Frigo & Scan IA</span></h2>
       <p class="muted">Aucun compte requis. Données stockées localement ou sur iCloud.</p>
       <h2>Politique de Confidentialité</h2>
       <p class="muted"><strong>Dernière mise à jour :</strong> 2026-02-10</p>
@@ -379,7 +379,7 @@
     </section>
 
     <section class="lang card hidden" data-lang="ko">
-      <h2><span class="appname">냉장고 재고·식비 관리</span> 소개</h2>
+      <h2><span class="appname">냉장고 재고관리 & AI 스캔</span> 소개</h2>
       <p class="muted">계정 없이 사용 가능. 데이터는 기기 또는 iCloud에 저장.</p>
       <h2>개인정보 처리방침</h2>
       <p class="muted"><strong>최종 업데이트:</strong> 2026-02-10</p>
@@ -406,7 +406,7 @@
     </section>
 
     <section class="lang card hidden" data-lang="zh-hans">
-      <h2>关于<span class="appname">冰箱库存与食材费用</span></h2>
+      <h2>关于<span class="appname">冰箱库存管理 & AI扫描</span></h2>
       <p class="muted">无需账号。数据保存在本地或iCloud。</p>
       <h2>隐私政策</h2>
       <p class="muted"><strong>更新日期：</strong>2026-02-10</p>
@@ -433,7 +433,7 @@
     </section>
 
     <section class="lang card hidden" data-lang="zh-hant">
-      <h2>關於<span class="appname">冰箱庫存與食材費</span></h2>
+      <h2>關於<span class="appname">冰箱庫存管理 & AI掃描</span></h2>
       <p class="muted">無需帳號。資料保存在本機或iCloud。</p>
       <h2>隱私權政策</h2>
       <p class="muted"><strong>更新日期：</strong>2026-02-10</p>
@@ -467,14 +467,14 @@
 
   <script>
     const APP_NAMES = {
-      "ja": "見える化　冷蔵庫の在庫管理と食材費",
-      "es": "Inventario de Nevera y Costos",
-      "de": "Kühlschrank Inventar & Kosten",
-      "fr": "Inventaire Frigo et Coût",
-      "ko": "냉장고 재고·식비 관리",
-      "zh-hans": "冰箱库存与食材费用",
-      "zh-hant": "冰箱庫存與食材費",
-      "en": "Fridge Inventory: Grocery Cost"
+      "ja": "冷蔵庫の在庫管理とAIスキャン",
+      "es": "Control Nevera y Scan IA",
+      "de": "Kühlschrank & KI-Scan",
+      "fr": "Inventaire Frigo & Scan IA",
+      "ko": "냉장고 재고관리 & AI 스캔",
+      "zh-hans": "冰箱库存管理 & AI扫描",
+      "zh-hant": "冰箱庫存管理 & AI掃描",
+      "en": "Fridge Inventory & AI Scan"
     };
 
     function normalizeLang(raw) {
