--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
 
       <div class="app-info">
         <div class="app-badge">iOS • Free</div>
-        <h2>Fridge Inventory: Grocery Cost</h2>
+        <h2>Fridge Inventory & AI Scan</h2>
         <p>Log groceries and visualize what’s in your fridge — anytime, anywhere.</p>
         <p>Automatic inventory updates and ingredient cost tracking for each meal.</p>
 
