--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
 
     <article class="app-card">
       <div class="app-icon-wrapper" style="background:#e6f2ff;">
-        <img src="fridge_icon3.png" alt="Fridge Inventory: Grocery Cost icon" />
+        <img src="iconf.png" alt="Fridge Inventory: Grocery Cost icon" />
       </div>
 
       <div class="app-info">
