Fix image source filename for HOMU icon

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 
     <article class="app-card">
       <div class="app-icon-wrapper" style="background:#eef2ff;">
-        <img src="homu-icon.png" alt="HOMU+ icon" />
+        <img src="homu_icon.png" alt="HOMU+ icon" />
       </div>
 
       <div class="app-info">
