--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
       </div>
 
       <div class="app-info">
-        <div class="app-badge">iOS • Free / Premium</div>
+        <div class="app-badge">iOS • Free</div>
         <h2>HOMU+</h2>
         <p>A location-based focus app that automatically blocks distracting apps when you're at home.</p>
         <p>Stay focused in your personal space with smart app-blocking schedules and timers.</p>
