--- a/talkcase.privacy.html
+++ b/talkcase.privacy.html
@@ -340,7 +340,7 @@
       If iCloud backup is enabled on your device, locally stored App data may be included in your iCloud backup as managed by Apple. This is subject to Apple's iCloud terms and privacy policy.</p>
 
       <h3>5. Children's Privacy</h3>
-      <p>The App is not intended for use by individuals under the age of 13. We do not knowingly collect personal information from children under 13. If you believe that a child under 13 has provided personal information through the App, please contact us at omochi_soft-dev@yahoo.co.jp and we will take appropriate steps to address the situation.</p>
+      <p>The App is not intended for use by individuals under the age of 13. We do not knowingly collect personal information from children under 13.</p>
 
       <h3>6. Your Privacy Rights and Choices</h3>
       <p><strong>Access and Deletion</strong><br>
@@ -472,7 +472,7 @@
       デバイスでiCloudバックアップが有効になっている場合、ローカルに保存されたアプリデータは、Appleが管理するiCloudバックアップに含まれる場合があります。これにはAppleのiCloud利用規約およびプライバシーポリシーが適用されます。</p>
 
       <h3>5. 子供のプライバシー</h3>
-      <p>本アプリは13歳未満の個人による使用を意図していません。当社が意図的に13歳未満の子供から個人情報を収集することはありません。13歳未満の子供が本アプリを通じて個人情報を提供したと思われる場合は、omochi_soft-dev@yahoo.co.jp までご連絡ください。適切に対処いたします。</p>
+      <p>本アプリは13歳未満の個人による使用を意図していません。当社が意図的に13歳未満の子供から個人情報を収集することはありません。</p>
 
       <h3>6. お客様のプライバシーの権利と選択</h3>
       <p><strong>アクセスと削除</strong><br>
