--- a/index.html
+++ b/index.html
@@ -179,6 +179,7 @@
     .app-card:nth-child(5) { animation-delay: 0.5s; }
     .app-card:nth-child(6) { animation-delay: 0.6s; }
     .app-card:nth-child(7) { animation-delay: 0.7s; }
+    .app-card:nth-child(8) { animation-delay: 0.8s; } /* 追加分のアニメーション */
 
     .app-card:hover {
       transform: translateY(-8px) scale(1.01);
@@ -345,6 +346,23 @@
     <h2 class="section-title">Applications</h2>
 
     <div class="apps-grid">
+
+      <article class="app-card">
+        <div class="app-icon-wrapper" style="background:#f0e6ff;">
+          <img src="talkcase_icon.png" alt="TalkCase icon" />
+        </div>
+        <div class="app-info">
+          <div class="app-badge">iOS • Free</div>
+          <h2>TalkCase</h2>
+          <p>Turn your favorite plushies, figures, or photos into AI characters you can talk with every day.</p>
+          <p>Each character learns from your conversations, grows closer over time, and even reaches out when you've been away.</p>
+          <div class="app-links">
+            <a href="" target="_blank" rel="noopener noreferrer">View on the App Store</a>
+            <a href="https://omochisoft.github.io/talkcase.privacy.html" target="_blank" rel="noopener noreferrer">Contact / Support &amp; Privacy Policy</a>
+            <a href="https://omochisoft.github.io/talkcase.terms.html" target="_blank" rel="noopener noreferrer">Terms of Use</a>
+          </div>
+        </div>
+      </article>
 
       <article class="app-card">
         <div class="app-icon-wrapper" style="background:#eef2ff;">
