--- a/index.html
+++ b/index.html
@@ -354,8 +354,8 @@
         <div class="app-info">
           <div class="app-badge">iOS • Free</div>
           <h2>TalkCase</h2>
-          <p>Turn your favorite plushies, figures, or photos into AI characters you can talk with every day.</p>
-          <p>Each character learns from your conversations, grows closer over time, and even reaches out when you've been away.</p>
+            <p>Create your own AI avatars and chat with them freely — one-on-one, or all together in a group.</p>                                                                                
+  　　　　　　　<p>Every conversation is remembered, and avatars can send you a message when you've been away.</p>  
           <div class="app-links">
             <a href="" target="_blank" rel="noopener noreferrer">View on the App Store</a>
             <a href="https://omochisoft.github.io/talkcase.privacy.html" target="_blank" rel="noopener noreferrer">Contact / Support &amp; Privacy Policy</a>
