--- a/talkcase.privacy.html
+++ b/talkcase.privacy.html
@@ -339,8 +339,8 @@
       <p><strong>iCloud Backup</strong><br>
       If iCloud backup is enabled on your device, locally stored App data may be included in your iCloud backup as managed by Apple. This is subject to Apple's iCloud terms and privacy policy.</p>
 
-      <h3>5. Children's Privacy</h3>
-      <p>The App is not intended for use by individuals under the age of 13. We do not knowingly collect personal information from children under 13.</p>
+      <h3>5. Age Requirement</h3>
+      <p>The App is not intended for use by individuals under the age of 18. We do not knowingly collect personal information from individuals under 18.</p>
 
       <h3>6. Your Privacy Rights and Choices</h3>
       <p><strong>Access and Deletion</strong><br>
@@ -468,8 +468,8 @@
       <p><strong>iCloudバックアップ</strong><br>
       デバイスでiCloudバックアップが有効になっている場合、ローカルに保存されたアプリデータは、Appleが管理するiCloudバックアップに含まれる場合があります。これにはAppleのiCloud利用規約およびプライバシーポリシーが適用されます。</p>
 
-      <h3>5. 子供のプライバシー</h3>
-      <p>本アプリは13歳未満の個人による使用を意図していません。当社が意図的に13歳未満の子供から個人情報を収集することはありません。</p>
+      <h3>5. 年齢制限</h3>
+      <p>本アプリは18歳未満の個人による使用を意図していません。当社が意図的に18歳未満の個人から個人情報を収集することはありません。</p>
 
       <h3>6. お客様のプライバシーの権利と選択</h3>
       <p><strong>アクセスと削除</strong><br>
@@ -508,6 +508,7 @@
 
       <p><strong>TalkCase</strong>는 사용자의 개인정보를 소중하게 생각합니다.</p>
       <ul>
+        <li><strong>연령 제한:</strong> 본 앱은 18세 이상부터 사용 가능합니다.</li>
         <li><strong>계정 불필요 및 로컬 저장:</strong> 계정 생성이 필요 없으며, 아바타 및 채팅 내역은 모두 사용자의 기기에만 로컬로 저장됩니다.</li>
         <li><strong>AI 및 제3자 서비스:</strong> 대화 생성 및 이미지 분석을 위해 데이터가 Google Gemini AI로 전송됩니다. API 보안(App Check) 및 광고 제공을 위해 Firebase 및 AdMob이 사용되며, 광고는 기기 식별자(IDFA)를 사용하지 않는 비개인화 방식으로 제공됩니다.</li>
         <li><strong>결제 데이터:</strong> 모든 결제는 Apple을 통해 처리되며, 개발자는 신용카드 정보를 수집하거나 저장하지 않습니다.</li>
@@ -527,6 +528,7 @@
 
       <p><strong>TalkCase</strong> 非常重視您的隱私。</p>
       <ul>
+        <li><strong>年齡限制：</strong> 必須年滿 18 歲方可使用本 App。</li>
         <li><strong>無需帳號與本機儲存：</strong> 無需建立帳號，所有的角色與對話紀錄皆僅儲存於您的裝置本機。</li>
         <li><strong>AI 與第三方服務：</strong> 您的對話與上傳圖片會傳送至 Google Gemini AI 以生成回應。應用程式亦使用 Firebase 與 AdMob 確保 API 安全性與提供廣告（廣告以非個人化模式運行，不使用設備識別碼 IDFA）。</li>
         <li><strong>付款資訊：</strong> 所有付款皆由 Apple 處理，開發者不會收集或儲存您的信用卡資訊。</li>
@@ -546,6 +548,7 @@
 
       <p><strong>TalkCase</strong> 非常重视您的隐私。</p>
       <ul>
+        <li><strong>年龄限制：</strong> 必须年满 18 岁方可使用本应用。</li>
         <li><strong>无需账号与本地存储：</strong> 无需建立账号，所有的角色与对话记录皆仅保存在您的设备本地。</li>
         <li><strong>AI 与第三方服务：</strong> 您的对话与上传图片会发送至 Google Gemini AI 以生成回应。应用亦使用 Firebase 与 AdMob 确保 API 安全性与提供广告（广告以非个性化模式运行，不使用设备标识符 IDFA）。</li>
         <li><strong>付款信息：</strong> 所有付款皆由 Apple 处理，开发者不会收集或存储您的信用卡信息。</li>
@@ -577,7 +580,7 @@
       } else if (langCode === 'zh-tw' || langCode === 'zh-hk' || langCode === 'zh-hant') {
         targetId = 'lang-zh-hant'; // 繁体字
       } else if (langCode.startsWith('zh')) {
-        targetId = 'lang-zh-hans'; // その他中国語は簡体字へ
+        targetId = 'lang-zh-hans'; // その他中国語は简体字へ
       }
 
       // すべてのセクションを非表示にして、対象のみアクティブ化
